--- a/package.json
+++ b/package.json
@@ -25,62 +25,64 @@
     "/public/build"
   ],
   "dependencies": {
-    "@prisma/client": "^3.15.0",
-    "@remix-run/node": "^1.6.0",
-    "@remix-run/react": "^1.6.0",
-    "@remix-run/serve": "^1.6.0",
-    "@remix-run/server-runtime": "^1.6.0",
+    "@notionhq/client": "^2.1.1",
+    "@prisma/client": "^4.1.1",
+    "@remix-run/node": "^1.6.7",
+    "@remix-run/react": "^1.6.7",
+    "@remix-run/serve": "^1.6.7",
+    "@remix-run/server-runtime": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "bezier-easing": "^2.1.0",
-    "countup.js": "^2.2.0",
+    "countup.js": "^2.3.2",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-prism": "^2.2.4",
+    "notion-to-md": "^2.5.4",
     "postcss-import": "^14.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark": "^14.0.2",
     "strip-markdown": "^5.0.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.3.1",
-    "@remix-run/dev": "^1.6.0",
-    "@remix-run/eslint-config": "^1.6.0",
+    "@faker-js/faker": "^7.3.0",
+    "@remix-run/dev": "^1.6.7",
+    "@remix-run/eslint-config": "^1.6.7",
     "@testing-library/cypress": "^8.0.3",
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^14.2.0",
+    "@testing-library/dom": "^8.16.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.2",
     "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "^8.4.3",
-    "@types/node": "^17.0.41",
-    "@types/react": "^17.0.45",
-    "@types/react-dom": "^17.0.17",
-    "@vitejs/plugin-react": "^1.3.2",
-    "autoprefixer": "^10.4.7",
+    "@types/eslint": "^8.4.5",
+    "@types/node": "^18.6.4",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.8",
     "binode": "^1.0.5",
-    "c8": "^7.11.3",
+    "c8": "^7.12.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.17.0",
+    "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
-    "happy-dom": "^5.2.0",
-    "msw": "^0.42.1",
+    "happy-dom": "^6.0.4",
+    "msw": "^0.44.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
-    "prettier": "2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "prisma": "^3.15.0",
+    "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.1.1",
     "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.1.0",
-    "ts-node": "^10.8.1",
+    "tailwindcss": "^3.1.7",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.10",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4",
     "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.14.1"
+    "vitest": "^0.20.3"
   },
   "engines": {
     "node": ">=17"
