--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "target": "ES2019",
+    "noImplicitAny": false,
     "strict": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
