paginaion basically working.

--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
     "@remix-run/server-runtime": "^1.6.7",
+    "@types/lodash.chunk": "^4.2.7",
     "bcryptjs": "^2.4.3",
     "bezier-easing": "^2.1.0",
     "countup.js": "^2.3.2",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
+    "lodash.chunk": "^4.2.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-prism": "^2.2.4",
