--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "dependencies": {
     "@notionhq/client": "^2.1.1",
-    "@prisma/client": "^4.1.1",
+    "@prisma/client": "^4.2.1",
     "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
@@ -37,11 +37,12 @@
     "countup.js": "^2.3.2",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
+    "is-plain-obj": "^4.1.0",
     "lodash.chunk": "^4.2.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-prism": "^2.2.4",
-    "notion-to-md": "^2.5.4",
+    "notion-to-md": "^2.5.5",
     "postcss-import": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,18 +51,18 @@
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.3.0",
+    "@faker-js/faker": "^7.4.0",
     "@remix-run/dev": "^1.6.7",
     "@remix-run/eslint-config": "^1.6.7",
     "@testing-library/cypress": "^8.0.3",
-    "@testing-library/dom": "^8.16.1",
+    "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.2",
+    "@testing-library/user-event": "^14.4.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.5",
-    "@types/node": "^18.6.4",
-    "@types/react": "^18.0.15",
+    "@types/node": "^18.7.1",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
@@ -73,18 +74,18 @@
     "happy-dom": "^6.0.4",
     "msw": "^0.44.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.1.1",
+    "prisma": "^4.2.1",
     "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.1.7",
+    "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4",
-    "vite": "^3.0.4",
+    "vite": "^3.0.5",
     "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.20.3"
+    "vitest": "^0.21.1"
   },
   "engines": {
     "node": ">=17"
