--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
     "dev:remix": "cross-env NODE_ENV=development binode -- @remix-run/dev:remix dev",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -w -i ./app/styles/app.css -o ./app/styles/style.css --postcss",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "setup": "prisma migrate dev && prisma db seed",
     "start": "remix-serve build",
-    "test": "vitest",
-    "typecheck": "tsc -b && tsc -b cypress",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "typecheck": "tsc -b"
   },
   "prettier": {},
   "eslintIgnore": [
@@ -26,71 +22,58 @@
   ],
   "dependencies": {
     "@notionhq/client": "^2.1.1",
-    "@prisma/client": "^4.2.1",
     "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
     "@remix-run/server-runtime": "^1.6.7",
     "@types/lodash.chunk": "^4.2.7",
-    "bcryptjs": "^2.4.3",
     "bezier-easing": "^2.1.0",
+    "binode": "^1.0.5",
     "countup.js": "^2.3.2",
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.14.54",
     "glob": "^8.0.3",
-    "gray-matter": "^4.0.3",
     "is-plain-obj": "^4.1.0",
     "lodash.chunk": "^4.2.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.6.4",
-    "markdown-it-prism": "^2.2.4",
+    "mdx-bundler": "^9.0.1",
     "notion-to-md": "^2.5.5",
+    "octonode": "^0.10.2",
     "postcss-import": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-external-links": "^2.0.0",
+    "rehype-slug": "^5.0.1",
     "remark": "^14.0.2",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-prism": "^1.3.6",
     "strip-markdown": "^5.0.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.4.0",
     "@remix-run/dev": "^1.6.7",
     "@remix-run/eslint-config": "^1.6.7",
-    "@testing-library/cypress": "^8.0.3",
-    "@testing-library/dom": "^8.17.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "^8.4.5",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/node": "^18.7.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
-    "binode": "^1.0.5",
-    "c8": "^7.12.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.5.0",
-    "happy-dom": "^6.0.4",
-    "msw": "^0.44.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
+    "precss": "^4.0.0",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.2.1",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.5",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.21.1"
+    "vite-tsconfig-paths": "^3.5.0"
   },
   "engines": {
     "node": ">=17"
-  },
-  "prisma": {
-    "seed": "node --require tsconfig-paths/register prisma/seed.js"
   }
 }
