--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@notionhq/client": "^2.1.1",
     "@ramseyinhouse/feedback-component": "^1.0.2",
+    "@remark-embedder/core": "^3.0.1",
     "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
