--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-prism": "^1.3.6",
+    "remix-utils": "^3.3.0",
+    "schema-dts": "^1.1.0",
     "strip-markdown": "^5.0.0",
     "tiny-invariant": "^1.2.0"
   },
