--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "run-s build:*",
     "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
+    "build:remix": "NODE_ENV=production remix build",
     "dev": "run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "cross-env NODE_ENV=development binode -- @remix-run/dev:remix dev",
@@ -21,6 +21,7 @@
     "/public/build"
   ],
   "dependencies": {
+    "@jam-comments/next": "^0.1.4",
     "@notionhq/client": "^2.1.1",
     "@ramseyinhouse/feedback-component": "^1.0.2",
     "@remark-embedder/core": "^3.0.1",
@@ -30,6 +31,7 @@
     "@remix-run/server-runtime": "^1.6.7",
     "@supabase/supabase-js": "^1.35.6",
     "@types/lodash.chunk": "^4.2.7",
+    "aws-sdk": "^2.1202.0",
     "bezier-easing": "^2.1.0",
     "binode": "^1.0.5",
     "countup.js": "^2.3.2",
